# somaeastside.org

./: .gitignore  Makefile  README.md  _config.ts  deno.json  tsconfig.json
.github/workflows/: prod-build.yml
lambda/: prerequisites.sh
lambda/pco/: Cargo.toml  Makefile  manual-testing.sh
lambda/pco/src/: error.rs  main.rs  secret.rs
lambda/pco/src/api/: events.rs  mod.rs
pages/: index.md
src/: index.md  index.tsx
src/_components/icons/: soma.vto
src/_includes/icons/: Soma.tsx  connect.liquid  soma.liquid
src/_includes/layouts/: main.liquid  main.tsx  main.vto
src/_includes/templates/: Header.tsx  WebCarousel.tsx  header.liquid  web-carousel.html
src/content/: _data.yml
src/content/about/: connect_with_us.md  mission.md  next_steps.md  team_elders.md
src/content/ministries/: mission_communities.md
src/content/sermon_notes/: 2023-11-05.md  2023-11-19.md  2024-01-07.md
src/script/component/: carousel.js  web-carousel.js
src/sermons/: 2021-10-10.md  _data.yml
src/ui/: carousel.browser.tsx
