[package]
name = "pco-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.10.0"
aws-smithy-runtime-api = { version = "1.1.3", features = ["client"] }
base32 = "0.4.0"
chrono = { version = "0.4.31", features = ["std"] }
clap = "4.4.18"
http = "1.0.0"
lambda_runtime = "0.9.0"
poem = "2.0.0"
poem-lambda = "4.0.0"
poem-openapi = { version = "4.0.0", features = ["swagger-ui"] }
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["deflate", "brotli", "gzip", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
